Implement the load worker that can receive control events from the load driver and initiate load testing scenarios. Will be used for GRPC's continuous load testing process.